tests/compiler/errors/global_after_body.casa
# expect: SYNTAX
0 = X

fn foo {
    0 = local_var
    global X
}

foo
